--- a/index.html
+++ b/index.html
@@ -3,157 +3,183 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" href="primaryStyles.css">
+  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans">
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Inicio</title>
 </head>
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="Inicio.html"><img src="./assets/Craft-Mania-Logo.png" alt="Logo de CraftMania"
-            height="35"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/catalogo.html">Catalogo</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/noticias.html">Novedades</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./pages/contacto.html">Contactanos</a>
-            </li>
-          </ul>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="promotionSection">
+            <img src="./assets/icons/Delivery.png" alt="">
+            <span>Envío gratuito a partir de $40. Tiempo de entrega en 48 horas **Consultar según área de
+              entrega**</span>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <nav class="navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/crafting.html">
+                    <img src="./assets/icons/Papel.png" alt="Papelería Creativa"> Craft's
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/sublimation.html">
+                    <img src="./assets/icons/Tinta.png" alt="Aplicación de Tinta"> Sublimación
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/vinyl.html">
+                    <img src="./assets/icons/Vinil.png" alt="Vinilos de Corte & Textiles"> Vinilos
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/delivery_points.html">
+                    <img src="./assets/icons/Location.png" alt="Ubicación"> Puntos de Entrega
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/support.html">
+                    <img src="./assets/icons/Support.png" alt="Asistencia en Línea"> Soporte
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/contact.html">
+                    <img src="./assets/icons/Contacto.png" alt="Información de Contacto"> Contacto
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </nav>
         </div>
       </div>
-    </nav>
+    </div>
   </header>
   <main>
     <!--Sección Inicial de la Pagina-->
-    <div class="upper">
-      <div class="overlay container-fluid p-absolute">
-        <div class="row h-100 d-flex justify-content-around">
-          <div class="col-lg-6 col-md-12 content">
-            <h1>Este sitio es para un H1.</h1>
-            <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-              labore
-              et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore
-              et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore
-              et dolore magna aliqua.</p>
-          </div>
-          <div class="col-lg-6 media d-none d-lg-flex">
-            <div class="outer-div">
-              <div class="bottom-left"></div>
-              <div class="top-right"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!--Sección Media de la Pagina-->
-
-    <div id="middle">
-      <div class="container-fluid">
-        <div class="row h-100 d-flex align-items-center mb-20">
-          <div class="col-fluid col-lg-4 d-flex flex-column justify-content-center align-items-center">
-            <div class="servicePicture"><img src="./assets/Silhouette-Cameo-4-Stickers.jpg" alt=""></div>
-            <button type="button" class="btn btn-primary">Stickers</button>
-          </div>
-          <div class="col-fluid col-lg-4 d-flex flex-column justify-content-center align-items-center">
-            <div class="servicePicture"><img src="./assets/VinilEasyWeed-Muestra1-Shortcut.jpg" alt=""></div>
-            <button type="button" class="btn btn-primary">Nuestros Viniles</button>
-          </div>
-          <div class="col-fluid col-lg-4 d-flex flex-column justify-content-center align-items-center">
-            <div class="servicePicture"><img src="./assets/Sublimación-Prendas-Shortcut.jpg" alt=""></div>
-            <button type="button" class="btn btn-primary">Sublimación</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>
-  <footer class="footer">
-    <footer>
-      <div class="container-fluid d-flex flex-column justify-content-center">
-        <div class="row d-none d-lg-flex">
-          <div class="col-3">
-            <div class="footer-section">
-              <h4>Catálogo</h4>
-              <ul>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Ofertas</a></li>
-                <li><a href="#">Novedades</a></li>
-                <!-- Añadir más opciones aquí -->
-              </ul>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="footer-section">
-              <h4>Servicios</h4>
-              <ul>
-                <li><a href="#">Envíos</a></li>
-                <li><a href="#">Personalización</a></li>
-                <li><a href="#">Asesoramiento</a></li>
-                <!-- Añadir más opciones aquí -->
-              </ul>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="footer-section">
-              <h4>Freebies</h4>
-              <ul>
-                <li><a href="#">Descargas gratuitas</a></li>
-                <li><a href="#">Muestras gratuitas</a></li>
-                <li><a href="#">Promociones</a></li>
-                <!-- Añadir más opciones aquí -->
-              </ul>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="footer-section">
-              <h4>Nosotros</h4>
-              <ul>
-                <li><a href="#">Misión y visión</a></li>
-                <li><a href="#">Equipo</a></li>
-                <li><a href="#">Testimonios</a></li>
-                <!-- Añadir más opciones aquí -->
-              </ul>
-            </div>
-          </div>
-        </div>
+    <section class="headerSection d-flex justify-content-center align-items-center">
+      <div class="container">
         <div class="row">
-          <div class="col">
-            <div class="footer-bottom">
-              <p>Todos los derechos reservados &copy; Craftmania Panamá, 2023</p>
-              <div class="footer-legal">
-                <a href="#">Políticas de privacidad</a>
-                <a href="#">Términos y condiciones</a>
-              </div>
+          <div class="col-lg-6 col-md-12">
+            <h1 class="mb-4">Bienvenido a CraftMania</h1>
+            <h2>Personaliza & Disfruta</h2>
+            <p>Nos apasiona dar vida a tus celebraciones de cumpleaños y eventos de una manera única y personalizada. Ya
+              sea que estés planeando una fiesta de cumpleaños, una reunión corporativa o cualquier otro evento, estamos
+              aquí para convertir tus ideas en realidad.<br><br>Explora nuestro catálogo y descubre cómo podemos hacer
+              que tu próxima celebración sea excepcional.</p>
+            <button class="btn btn-primary mt-3">Conocer más</button>
+          </div>
+          <div class="col-lg-6 d-none d-lg-flex justify-content-center align-items-center">
+            <img src="./assets/Craft-Mania-Logo.png" alt="Logo" class="logo img-fluid">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Sección Secundaria de la Pagina-->
+
+    <section class="secondSection">
+      <div class="container-fluid d-flex flex-column">
+        <div class="row"><img src="./assets/icons/PolygonForm.png" alt="Polygon" class="img-fluid"></div>
+        <div class="row mb-4 ">
+          <div class="col-lg-2 mx-5">
+            <div class="welcomeItem d-flex flex-column">
+              <img src="./assets/icons/Regalo.png" alt="Icono de Regalo">
+              <span>Regalo de Bienvenida</span>
+            </div>
+          </div>
+          <div class="col-lg-2 mx-5">
+            <div class="welcomeItem">
+              <img src="./assets/icons/Descuento.png" alt="Icono de Descuento"><br>
+              <span>Descuento de Fidelidad</span>
+            </div>
+          </div>
+          <div class="col-lg-2 mx-5">
+            <div class="welcomeItem">
+              <img src="./assets/icons/Regalo.png" alt="Icono de Regalo"><br>
+              <span>Item no especificado</span>
+            </div>
+          </div>
+          <div class="col-lg-2 mx-5">
+            <div class="welcomeItem">
+              <img src="./assets/icons/24Horas.png" alt="Icono de 24 horas"><br>
+              <span>Atención las 24 horas</span>
             </div>
           </div>
         </div>
-    </footer>
+        <div class="row mb-5">
+          <div class="col-lg-2 mx-5">
+            <div class="showcaseItem"></div>
+          </div>
+          <div class="col-lg-2 mx-5">
+            <div class="showcaseItem"></div>
+          </div>
+          <div class="col-lg-2 mx-5">
+            <div class="showcaseItem"></div>
+          </div>
+          <div class="col-lg-2 mx-5">
+            <div class="showcaseItem"></div>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <section class="thirdSection">
+      <div class="container-fluid d-flex flex-column">
+        <div class="row mb-3">
+          <h2>¡La temática que tu elijas!</h2>
+          <span>Una película, un personaje de ficción o un anime. Sea lo que sea, estamos aquí para ti y
+            te<br>brindaremos
+            la personalización al 100% sea cual sea tu elección.</span>
+        </div>
+        <div class="row justify-content-around mb-5">
+          <div class="col-3">
+            <div class="themePicker"><img src="./assets/CardSample.png" alt="sample" class="img-fluid"></div>
+          </div>
+          <div class="col-3">
+            <div class="themePicker"><img src="./assets/CardSample.png" alt="sample" class="img-fluid"></div>
+          </div>
+          <div class="col-3">
+            <div class="themePicker"><img src="./assets/CardSample.png" alt="sample" class="img-fluid"></div>
+          </div>
+          <div class="col-3">
+            <div class="themePicker"><img src="./assets/CardSample.png" alt="sample" class="img-fluid"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="container-fluid main-footer">
+      <div class="row">
+        <div class="col-12 background"></div>
+      </div>
+      <div class="row">
+        <img src="./assets/Craft-Mania-Logo.png" alt="Logo" class="img-fluid footerlogo">
+      </div>
+    </div>
   </footer>
+
   <!-- JavaScript -->
   <script src="js/jquery-3.5.1.slim.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
