--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -14,47 +14,28 @@
 </head>
 
 <body>
-  <header class="container-fluid d-none d-lg-flex justify-content-center align-items-center" id="promotionTag">
-    <img src="../assets/icons/Delivery.png" alt="">
-    <span class="font-weight-light mb-0">Envío gratuito a partir de $40. Tiempo de entrega en 48 horas</span>
+  <header class="container-fluid nav-container">
+    <nav class="navbar navbar-expand-lg bg-body-ligth" id="custom-navbar">
+      <a class="navbar-brand d-md-block d-lg-none" href="#">
+        <img src="./assets/logo-original.png" alt="Bootstrap" width="150">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto text-uppercase fw-light">
+          <a class="nav-link active mx-3" aria-current="page" href="./index.html">Inicio</a>
+          <a class="nav-link mx-3" href="./pages/catalogue.html">Catalogo</a>
+          <a class="nav-link mx-3" href="./pages/about-us.html">Sobre Nosotros</a>
+          <a class="nav-link mx-3" href="./pages/order-process.html">Proceso de Compra</a>
+          <a class="nav-link mx-3" href="./pages/contact.html">Contacto</a>
+        </ul>
+      </div>
+    </nav>
   </header>
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand d-lg-none" href="../index.html">
-      <img src="../assets/Craft-Mania-Logo.png" alt="Logo de tu empresa" height="50" class="p-2">
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <img src="../assets/icons/Inicio.png" alt="Papelería Creativa">
-          <a class="nav-link" href="../index.html">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <img src="../assets/icons/Papel.png" alt="Papelería Creativa">
-          <a class="nav-link" href="../pages/crafting.html">Craft's</a>
-        </li>
-        <li class="nav-item">
-          <img src="../assets/icons/Tinta.png" alt="Aplicación de Tinta">
-          <a class="nav-link" href="../pages/sublimation.html">Sublimación</a>
-        </li>
-        <li class="nav-item">
-          <img src="../assets/icons/Vinil.png" alt="Vinilos de Corte & Textiles">
-          <a class="nav-link" href="../pages/vinyl.html">Vinilos</a>
-        </li>
-        <li class="nav-item">
-          <img src="../assets/icons/Location.png" alt="Ubicación">
-          <a class="nav-link" href="../pages/orderprocess.html">Proceso para Pedidos</a>
-        </li>
-        <li class="nav-item">
-          <img src="../assets/icons/Contacto.png" alt="Información de Contacto">
-          <a class="nav-link" href="../pages/contact.html">Contacto</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+
+
   <main>
     <section class="container-fluid d-flex justify-content-center align-items-center">
       <div class="row p-5 justify-content-around">
@@ -72,49 +53,45 @@
     </section>
   </main>
 
-  <footer class="container-fluid">
-    <div class="main-footer">
-      <div class="container-fluid d-flex flex-column" id="footerBody">
-        <div class="row px-5 d-flex justify-content-around mt-5">
-          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
-            <div class="sectionTitle">Redes Sociales</div>
-            <div class="sectionItem"> <a
-                href="https://instagram.com/craftmania.pty?igshid=MzRlODBiNWFlZA==">Instagram</a> </div>
-            <div class="sectionItem"><a href="https://www.facebook.com/profile.php?id=61551363476187">Facebook</a></div>
-            <div class="sectionItem"><a href="https://www.tiktok.com/@mgcraft.pty?_t=8fmU2t6IpW9&_r=1">TikTok</a></div>
-          </div>
-          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
-            <div class="sectionTitle">Políticas</div>
-            <div class="sectionItem">Privacidad</div>
-            <div class="sectionItem">Confidencialidad a Usuario</div>
-            <div class="sectionItem">Recursos</div>
-          </div>
-          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
-            <div class="sectionTitle">Colaboradores</div>
-            <div class="sectionItem">Emily Moran</div>
-            <div class="sectionItem">Esteban Samaniego</div>
-          </div>
-          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
-            <div class="sectionTitle">Centro de Ayuda</div>
-            <div class="sectionItem">Devoluciones & Reclamos</div>
-            <div class="sectionItem">Preguntas Frecuentes</div>
-            <div class="sectionItem">Politicas de Envio</div>
-          </div>
+  <footer class="container-fluid d-flex flex-column" id="footer-body">
+    <div class="row mb-0 p-5 d-flex flex-row align-items-center" id="footer-content">
+      <div class="col-lg-3 col-md-8" id="copyrigth">
+        <div class="footer-left-section"> <img src="./assets/logo-positivo.png" alt="Craftmania Logo Versión Positiva"
+            class="img-fluid mb-3" id="footer-logo">
+          <p class="text-light fw-light">Todas las imágenes, textos, gráficos y otros elementos de este
+            sitio web están protegidos por las <strong>leyes de derechos de autor y otras leyes de propiedad
+              intelectual</strong>.
+            Queda estrictamente prohibida la reproducción, distribución, o modificación de cualquier parte de
+            este sitio web sin el permiso previo por escrito de <strong>CraftMania Panamá</strong>.</p>
         </div>
-        <div class="border-top container-fluid my-4" id="footerDivider"></div>
-        <div class="copyrigth"><span>Todas las imágenes, textos, gráficos y otros elementos de este sitio web están
-            protegidos por las leyes de derechos de autor y otras leyes de propiedad intelectual. Queda estrictamente
-            prohibida la reproducción, distribución, o modificación de cualquier parte de este sitio web sin el permiso
-            previo por escrito de CraftMania Panamá.</span></div>
       </div>
-      <img src="../assets/Craft-Mania-Logo.png" alt="Logo" class="img-fluid footerlogo">
+      <div class="col-lg-2 d-none d-sm-none d-md-none d-lg-flex text-light d-flex flex-column justify-content-start">
+        <span class="mb-2 fw-bold fs-5">Redes Sociales</span>
+        <a href="https://instagram.com/craftmania.pty?igshid=MzRlODBiNWFlZA=="
+          class="text-decoration-none mb-1">Instagram</a>
+        <a href="https://www.facebook.com/profile.php?id=61551363476187" class="text-decoration-none mb-1">Facebook</a>
+        <a href="https://www.tiktok.com/@mgcraft.pty?_t=8fmU2t6IpW9&_r=1" class="text-decoration-none mb-1">TikTok</a>
+      </div>
+      <div class="col-lg-2 d-none d-md-none d-lg-flex  text-light d-flex flex-column justify-content-start">
+        <span class="mb-2 fw-bold fs-5">Enlaces</span>
+        <a href="" class="text-decoration-none mb-1">Catalogo</a>
+        <a href="" class="text-decoration-none mb-1">Pedidos</a>
+        <a href="" class="text-decoration-none mb-1">Enlace 3</a>
+
+      </div>
+      <div class="col-lg-2 d-none d-md-none d-lg-flex text-light d-flex flex-column justify-content-start">
+        <span class="mb-2 fw-bold fs-5">Contacto</span>
+        <a href="" class="text-decoration-none mb-1">Whatsapp</a>
+        <a href="" class="text-decoration-none mb-1">Correo electronico</a>
+        <a href="" class="text-decoration-none mb-1">Pedidos</a>
+
+      </div>
     </div>
   </footer>
 
-  <!-- JavaScript -->
-  <script src="js/jquery-3.5.1.slim.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
