--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,11 +26,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto text-uppercase fw-light">
-          <a class="nav-link active mx-3" aria-current="page" href="../index.html">Inicio</a>
+          <a class="nav-link mx-3" href="../index.html">Inicio</a>
           <a class="nav-link mx-3" href="../pages/catalogue.html">Catalogo</a>
           <a class="nav-link mx-3" href="../pages/about-us.html">Sobre Nosotros</a>
           <a class="nav-link mx-3" href="../pages/order-process.html">Proceso de Compra</a>
-          <a class="nav-link mx-3" href="../pages/contact.html">Contacto</a>
+          <a class="nav-link active mx-3" aria-current="page" href="../pages/contact.html">Contacto</a>
         </ul>
       </div>
     </nav>
